Repository restructure to monorepo microservies architecture